<resources>
    <string name="app_name">orderf_ood</string>
    <string name="continue_text">Continue</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">Email address</string>
    <string name="user_name">User name</string>
    <string name="hint_username">Input user name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="remember">Remember</string>
    <string name="tiras_gmail">Input email adress</string>
    <string name="delicious_food">Delicious \nfood for you</string>
    <string name="input_password_hint">Input password</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="sauces">Sauces</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_history">History</string>
    <string name="title_acount">Account</string>
    <!--    product info-->
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="url">URL</string>
    <string name="price">Price</string>

    <!--    drawer menu-->
    <string name="add_product">Add product</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string-array name="login_tab_title_array">
        <item>　　Sign In　　</item>
        <item>　　Sign Up　　</item>
    </string-array>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGluaGtpZXVtaSIsImEiOiJjbGw3bjNvdXAwOTdnM2trZG5rbmlyNjV3In0.JXnLFZZ0L50ioujqxol1Cg</string>
    <string name="facebook_app_id">811731940442713</string>
    <string name="fb_login_protocol_scheme">fb811731940442713</string>
    <string name="facebook_client_token">33fe17312913fb4b0519d7e223901f23</string>
</resources>