<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:enabled="true"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/icon_chat"
        android:enabled="true"
        android:title="@string/title_chat"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/icon_history"
        android:enabled="true"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/icon_account"
        android:enabled="true"
        android:title="@string/title_acount"/>

</menu>