<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:gravity="top"
            android:text="@string/user_name"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/hint_username"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:gravity="top"
            android:text="@string/email_address"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/tiras_gmail"
            android:textColor="#000000"
            android:textSize="17sp"
            android:inputType="textEmailAddress"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:gravity="top"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:gravity="top"
            android:text="@string/confirm_password"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/input_password_hint"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:backgroundTint="#0C79FA"
            app:layout_constraintStart_toStartOf="parent">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>