<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".view.login.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:gravity="top"
            android:text="@string/email_address"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/tiras_gmail"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:alpha="0.4"
            android:gravity="top"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:hint="@string/some_id"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="italic"
            app:fontFamily="@font/nunito" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="italic"
            android:text="@string/remember" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:backgroundTint="#0C79FA">

        </Button>

        <Button
            android:id="@+id/btn_test_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="Test Loading"
            android:textAllCaps="false"
            app:backgroundTint="#0C79FA">

        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>